src/test/resources/invalid/typecheck/Assign_NoValue.vas
class Main is
    this() is
    end

    method a() is
        var a: Integer = b()
    end

    method b() is
    end
end